[tool.poetry]
name = "xray-desktop-app"
version = "0.1.0"
description = ""
authors = ["Navy881 <ag881.pst@gmail.com>"]
readme = "README.md"
packages = [{include = "xray_desktop_app"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
